# kada

./: .gitignore  README.md  manifest.json  sidebar.html
.github/workflows/: intelli-ops.yml
infrastructure/: .gitignore  .projenrc.ts  README.md  cdk.json  package-lock.json  package.json
infrastructure/metadata/event/: Dockerfile  event.py
infrastructure/metadata/meta/: Dockerfile
infrastructure/metadata/processor/: Dockerfile  processor.py
plugin/: sidebar.html
plugin/scripts/: bump-version.js  package-extension.js
plugin/src/: sidebar.js
plugin/tests/: e2e.test.js  integration.test.js
src/: background.js  content.js  sidebar.css  sidebar.js
tests/: unit.test.js
tts/: README.md  requirements.txt  sample.txt  tts.py
tts-rust/: Cargo.toml  sample.srt
tts-rust/src/: main.rs
