[package]
name = "tts-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.0.1"
aws-sdk-polly = "1.3.0"
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1.0.71"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"